home page new design wip

--- a/community/learn/graphql-tutorials/backend-services/homepage/src/styles/styles.scss
+++ b/community/learn/graphql-tutorials/backend-services/homepage/src/styles/styles.scss
@@ -355,6 +355,7 @@ body
     }
   }
 }
+/*
 .commonSectionWrapperBot
 {
   padding-bottom: 300px;
@@ -602,6 +603,7 @@ body
     }
   }
 }
+*/
 .footerWrapper
 {
   padding: 20px 0px;
