--- a/community/learn/graphql-tutorials/backend-services/homepage/src/styles/styles.scss
+++ b/community/learn/graphql-tutorials/backend-services/homepage/src/styles/styles.scss
@@ -97,6 +97,10 @@ body
   font-weight: 300;
   color: #505050;
 }
+ul
+{
+  padding-inline-start: 0px;
+}
 .sectionDescriptionSmall
 {
   font-family: 'Roboto';
@@ -277,6 +281,12 @@ body
 {
   padding: 30px 0;
   padding-bottom: 0;
+  .navbarDefault
+  {
+    background-color: transparent;
+    border: 0;
+    margin-bottom: -1px;
+  }
   .logoWrapper
   {
     display: inline-block;
@@ -292,7 +302,7 @@ body
     li
     {
       padding: 20px;
-      a
+      a, span
       {
         font-family: 'Raleway';
         font-size: 12px;
@@ -301,11 +311,13 @@ body
         padding: 0;
         color: #ffffff;
         opacity: 0.5;
+        min-height: 20px;
         &:hover
         {
           background-color: transparent;
           opacity: 1;
           outline: none;
+          color: #ffffff;
         }
         &:focus
         {
@@ -313,16 +325,111 @@ body
           outline: none;
         }
       }
+      .dropdownMenu
+      {
+        width: 460px;
+        border-radius: 2px;
+        top: 42px;
+        padding: 15px 10px;
+        .menuTitle
+        {
+          font-family: 'Roboto';
+          font-size: 24px;
+          font-weight: bold;
+          color: #2b0785;
+        }
+        .dropdownUl
+        {
+          li
+          {
+            padding: 13px 0;
+            border-bottom: 1px solid #ededed;
+            list-style-type: none;
+            padding-left: 35px;
+            color: #505050;
+            cursor: pointer;
+            .circle
+            {
+              width: 5px;
+              height: 5px;
+              background-color: #909090;
+              border-radius: 50%;
+              margin: 0 10px;
+            }
+          }
+          li:hover
+          {
+            color: #2b0785;
+            font-weight: 500;
+          }
+          li:last-child
+          {
+            border-bottom: 0;
+          }
+          .react, .vue, .angular, .elm
+          {
+            background-repeat: no-repeat;
+            background-size: 21px 21px;
+            background-position: left;
+          }
+          .react
+          {
+            background-image: url('../images/react-gray.svg');
+          }
+          .react:hover
+          {
+            background-image: url('../images/react-blue.svg');
+          }
+          .vue
+          {
+            background-image: url('../images/Vue-gray.svg');
+          }
+          .vue:hover
+          {
+            background-image: url('../images/Vue-icon.svg');
+          }
+          .angular
+          {
+            background-image: url('../images/angular-gray.svg');
+          }
+          .angular:hover
+          {
+            background-image: url('../images/angular-icon.svg');
+          }
+          .elm
+          {
+            background-image: url('../images/elm.svg');
+          }
+          .comingSoonHover, .comingSoonHover:hover
+          {
+            color: #909090;
+            font-weight: normal;
+            cursor: not-allowed;
+          }
+        }
+      }
     }
     .active
     {
-      a
+      a, span
       {
-          opacity: 1;
-          border-bottom: 1px solid #fff;
+        background-color: transparent;
+        opacity: 1;
+        border-bottom: 1px solid #fff;
+        color: #fff;
+        &:hover
+        {
+          background-color: transparent;
+          color: #ffffff;
+        }
       }
     }
   }
+}
+.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover
+{
+  background-color: transparent;
+  color: #fff;
 }
 .topBannerWrapper
 {
@@ -668,7 +775,7 @@ body
     width: calc(100% - 8px);
     display: flex;
     align-items: center;
-    padding: 25px 0;
+    padding: 15px 0;
     position: relative;
     margin-bottom: 8px;
     .tutorialBgImg
@@ -723,11 +830,14 @@ body
         }
         .comingSoon
         {
-          font-size: 12px;
+          font-size: 10px;
           color: #909090;
           position: absolute;
-          left: 0px;
-          bottom: -7px;
+          left: 50%;
+          bottom: -5px;
+          transform: translateX(-50%);
+          padding-top: 5px;
+          width: 60px;
         }
       }
       &:hover
@@ -924,16 +1034,26 @@ body
   {
     font-size: 30px;
   }
+  .sectionHeader
+  {
+    font-size: 22px;
+  }
   .positionWrapper
   {
     position: static;
     clear: both;
+  }
+  .whiteLineSeperator, .purpleLineSeperator
+  {
+    margin: 0 auto;
+    margin-bottom: 20px;
   }
   .headerWrapper
   {
     .logoWrapper
     {
       text-align: center;
+      padding-left: 15px;
       img
       {
         display: inline-block;
@@ -948,6 +1068,10 @@ body
       text-align: center;
       padding: 0 15px;
       padding-bottom: 20px;
+    }
+    .sectionHeader
+    {
+      text-align: center;
     }
     .sectionDescription
     {
@@ -973,6 +1097,81 @@ body
       }
     }
   }
+  .tutorialWrapper
+  {
+    .sectionHeader
+    {
+      text-align: center;
+      padding-bottom: 0;
+    }
+    .tutorailsHeaderWrapper
+    {
+      margin-top: 30px;
+      .tutorialHeader
+      {
+        font-size: 16px;
+        padding: 0 15px;
+        span
+        {
+          font-size: 12px;
+        }
+      }
+    }
+    .tutorialListWrapper
+    {
+      .listTutorial
+      {
+        padding: 15px 10px;
+        .tutorialIconWrapper
+        {
+          .comingSoon
+          {
+            font-size: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            padding-top: 5px;
+            width: 60px;
+          }
+        }
+      }
+    }
+  }
+  .willLearnWrapper
+  {
+    .sectionHeader
+    {
+      text-align: center;
+    }
+    .sectionDescription
+    {
+      width: 100%;
+      text-align: center;
+      padding-bottom: 0;
+    }
+    .willLearnTutorial
+    {
+      .willLearnList
+      {
+        margin-top: 30px;
+      }
+    }
+  }
+  .notifyWrapper
+  {
+    text-align: center;
+    input
+    {
+      width: 100%;
+      display: block;
+      margin-bottom: 20px;
+    }
+    button
+    {
+      width: auto;
+      padding: 10px 25px;
+    }
+  }
+  /*
   .iconWrapper
   {
     padding: 25px;
@@ -1051,9 +1250,70 @@ body
       padding-top: 15px;
     }
   }
+  */
 }
 @media (min-width: 768px) and (max-width: 991px)
 {
+  .purpleLineSeperator
+  {
+
+  }
+  .tutorialWrapper
+  {
+    .sectionHeader
+    {
+      padding-bottom: 0;
+    }
+    .tutorailsHeaderWrapper
+    {
+      margin-top: 30px;
+    }
+    .tutorialListWrapper
+    {
+      .listTutorial
+      {
+        .tutorialIconWrapper
+        {
+          .comingSoon
+          {
+            font-size: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            padding-top: 5px;
+            width: 60px;
+          }
+        }
+      }
+    }
+  }
+  .willLearnWrapper
+  {
+    .sectionHeader
+    {
+      text-align: left;
+    }
+    .sectionDescription
+    {
+      width: 75%;
+      text-align: left;
+      padding-bottom: 0;
+    }
+    .willLearnTutorial
+    {
+      .willLearnList
+      {
+        margin-top: 30px;
+        .listWrapper
+        {
+          .sectionDescription
+          {
+            text-align: left;
+          }
+        }
+      }
+    }
+  }
+  /*
   .techologyWrapper
   {
     .chooseListWrapper
@@ -1067,4 +1327,5 @@ body
       }
     }
   }
+  */
 }
