move images to cdn

--- a/community/learn/graphql-tutorials/backend-services/homepage/src/styles/styles.scss
+++ b/community/learn/graphql-tutorials/backend-services/homepage/src/styles/styles.scss
@@ -429,123 +429,123 @@ ul
 }
 .reactBg
 {
-  background-image: url('../images/react-purple.svg');
+  background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/react-purple.svg');
   &:hover
   {
-    background-image: url('../images/react-original.svg');
+    background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/react-original.svg');
   }
 }
 .vueBg
 {
-  background-image: url('../images/vue-purple.svg');
+  background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/vue-purple.svg');
   &:hover
   {
-    background-image: url('../images/vue-original.svg');
+    background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/vue-original.svg');
   }
 }
 .angularBg
 {
-  background-image: url('../images/angular-purple.svg');
+  background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/angular-purple.svg');
   &:hover
   {
-    background-image: url('../images/angular-original.svg');
+    background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/angular-original.svg');
   }
 }
 .elmBg
 {
-  background-image: url('../images/elm-purple.svg');
+  background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/elm-purple.svg');
   &:hover
   {
-    background-image: url('../images/elm-original.jpg');
+    background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/elm-original.jpg');
   }
 }
 .reBg
 {
-  background-image: url('../images/reasonml-purple.svg');
+  background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/reasonml-purple.svg');
   &:hover
   {
-    background-image: url('../images/reasonml-original.svg');
+    background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/reasonml-original.svg');
   }
 }
 .hasuraBg
 {
-  background-image: url('../images/hasura-purple.svg');
+  background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/hasura-purple.svg');
   &:hover
   {
-    background-image: url('../images/hasura-original.svg');
+    background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/hasura-original.svg');
   }
 }
 .postgresBg
 {
-  background-image: url('../images/postgres-purple.svg');
+  background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/postgres-purple.svg');
   &:hover
   {
-    background-image: url('../images/postgres-original.svg');
+    background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/postgres-original.svg');
   }
 }
 .iosBg
 {
-  background-image: url('../images/ios-purple.svg');
+  background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/ios-purple.svg');
   &:hover
   {
-    background-image: url('../images/ios-original.svg');
+    background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/ios-original.svg');
   }
 }
 .androidBg
 {
-  background-image: url('../images/android-purple.svg');
+  background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/android-purple.svg');
   &:hover
   {
-    background-image: url('../images/android-original.svg');
+    background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/android-original.svg');
   }
 }
 .flutterBg
 {
-  background-image: url('../images/flutter-purple.svg');
+  background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/flutter-purple.svg');
   &:hover
   {
-    background-image: url('../images/flutter-original.svg');
+    background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/flutter-original.svg');
   }
 }
 .reactDisableBg
 {
-  background-image: url('../images/react-disable.svg');
+  background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/react-disable.svg');
 }
 .vueDisableBg
 {
-  background-image: url('../images/vue-disable.svg');
+  background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/vue-disable.svg');
 }
 .angularDisableBg
 {
-  background-image: url('../images/angular-disable.svg');
+  background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/angular-disable.svg');
 }
 .elmDisableBg
 {
-  background-image: url('../images/elm-disable.svg');
+  background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/elm-disable.svg');
 }
 .reDisableBg
 {
-  background-image: url('../images/reasonml-disable.svg');
+  background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/reasonml-disable.svg');
 }
 .hasuraDisableBg
 {
-  background-image: url('../images/hasura-disable.svg');
+  background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/hasura-disable.svg');
 }
 .postgresDisableBg
 {
-  background-image: url('../images/postgres-disable.svg');
+  background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/postgres-disable.svg');
 }
 .iosDisableBg
 {
-  background-image: url('../images/ios-disable.svg');
+  background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/ios-disable.svg');
 }
 .androidDisableBg
 {
-  background-image: url('../images/android-disable.svg');
+  background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/android-disable.svg');
 }
 .flutterDisableBg
 {
-  background-image: url('../images/flutter-disable.svg');
+  background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/flutter-disable.svg');
 }
 .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover
 {
@@ -576,6 +576,9 @@ ul
     width: 90%;
     letter-spacing: 1px;
     padding-bottom: 20px;
+    a {
+      text-decoration: none
+    }
   }
   .topBannerImg
   {
@@ -841,14 +844,14 @@ ul
         }
         .discordIcon
         {
-          background-image: url('../images/discord-gray.svg');
+          background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/discord-gray.svg');
           width: 27px;
           height: 20px;
           background-repeat: no-repeat;
         }
         .discordIcon:hover
         {
-          background-image: url('../images/discord-white.svg');
+          background-image: url('https://graphql-engine-cdn.hasura.io/learn-hasura/assets/homepage/discord-white.svg');
         }
       }
     }
