--- a/console/src/components/Common/TableCommon/Table.scss
+++ b/console/src/components/Common/TableCommon/Table.scss
@@ -9,6 +9,9 @@
   //margin-top: 25px;
 }
 
+.tableContainerModified {
+}
+
 .schemaWrapper {
   width: 100%;
 
@@ -202,8 +205,13 @@ a.expanded {
 
 .tableCellCenterAligned {
   text-align: center;
+  overflow: unset !important;
 }
-
+.tableCellCenterAlignedOverflow
+{
+  text-align: center;
+  overflow: hidden !important;
+}
 .tableCellExpanded {
   white-space: normal;
 }
@@ -214,4 +222,3 @@ a.expanded {
     padding-bottom: 3px;
   }
 }
-
