--- a/console/src/components/Common/TableCommon/ReactTableOverrides.css
+++ b/console/src/components/Common/TableCommon/ReactTableOverrides.css
@@ -4,6 +4,7 @@
 
 .ReactTable .rt-tbody {
   min-height: 40px;
+  overflow: unset;
 }
 
 .ReactTable .rt-noData {
@@ -68,7 +69,10 @@
   border-right: 1px solid rgba(0,0,0,0.1);
   word-wrap: break-word;
 }
-
+.ReactTable .rt-th, .ReactTable .rt-td
+{
+  overflow: unset !important;
+}
 .ReactTable .rt-th .ellipsis,
 .ReactTable .rt-td > div {
   overflow: hidden;
@@ -85,23 +89,26 @@
 
 .ReactTable .rt-table .rt-thead .rt-tr .rt-th:first-child {
   flex: 24 0 auto !important;
-  min-width: 150px;
+  min-width: 170px;
 }
 
 .ReactTable .rt-table .rt-tbody .rt-tr-group .rt-tr.-odd .rt-td:first-child {
   flex: 24 0 auto !important;
-  min-width: 150px;
+  min-width: 170px;
 }
 
 .ReactTable .rt-table .rt-tbody .rt-tr-group .rt-tr.-even .rt-td:first-child {
   flex: 24 0 auto !important;
-  min-width: 150px;
+  min-width: 170px;
 }
 
 .ReactTable .rt-table .rt-tbody .rt-tr-group .rt-tr.-odd:hover {
   background-color: #ebf7de;
 }
-
+.ReactTable .rt-table
+{
+  overflow: unset;
+}
 .ReactTable .rt-table .rt-tbody {
   margin-bottom: 10px;
   border: solid 1px rgba(0, 0, 0, 0.05);
@@ -127,7 +134,7 @@
 }
 
 .ReactTable .rt-table .rt-tbody {
-  overflow-x: hidden !important;
+  overflow-x: unset !important;
   min-width: fit-content !important;
 }
 
